--- a/chat/docker-compose.ete.yml
+++ b/chat/docker-compose.ete.yml
@@ -1,18 +1,18 @@
 version: "3"
 services:
   app:
-    build:
-      context: .
-    volumes:
-      - .:/go/src/app
+    build: .
     ports:
       - "${HTTP_PORT}:${HTTP_PORT}"
     depends_on:
-      - db
+      - users-db
+      - messages-db
     environment:
+      HTTP_PORT: ${HTTP_PORT}
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
       MONGO_URI: mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_DATABASE}
-  db:
+  users-db:
+    container_name: users_db_e2e
     image: "postgres"
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
@@ -20,7 +20,8 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "${POSTGRES_PORT}:${POSTGRES_PORT}"
-  mongo:
+  messages-db:
+    container_name: messages_db_e2e
     image: "mongo"
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
