--- a/chat/docker-compose.ete.yml
+++ b/chat/docker-compose.ete.yml
@@ -9,7 +9,7 @@ services:
       - messages-db
     environment:
       HTTP_PORT: ${HTTP_PORT}
-      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+      USER_SERVICE_ADDRESS: user-service:${GRPC_PORT}
       MONGO_URI: mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_DATABASE}
   users-db:
     container_name: users_db_e2e
@@ -28,4 +28,13 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "${MONGO_PORT}:${MONGO_PORT}"
-      
+  user-service:
+    build:
+      context: ../user_service
+    ports:
+      - "${GRPC_PORT}:${GRPC_PORT}"
+    environment:
+      GRPC_PORT: ${GRPC_PORT}
+      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@users-db:${POSTGRES_PORT}/${POSTGRES_DB}
+    depends_on:
+      - users-db        
