--- a/chat/.local.env
+++ b/chat/.local.env
@@ -9,6 +9,7 @@ MONGO_INITDB_ROOT_PASSWORD=secret
 MONGO_DATABASE=mongo
 MONGO_HOST=localhsot
 MONGO_PORT=27017
+GRPC_PORT=50051
 
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
+USER_SERVICE_ADDRESS=localhost:50051
 MONGO_URI=mongodb://mongoadmin:secret@localhost:27017/messages-db
