--- a/chat/docker-compose.local.yml
+++ b/chat/docker-compose.local.yml
@@ -1,13 +1,5 @@
 version: "3"
 services:
-  users-db:
-    image: "postgres"
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-    ports:
-      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
   messages-db:
     image: "mongo"
     environment:
@@ -15,13 +7,9 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "${MONGO_PORT}:${MONGO_PORT}"
-  user-service:
-    build:
-      context: ../user_service
-    ports:
-      - "${GRPC_PORT}:${GRPC_PORT}"
-    environment:
-      GRPC_PORT: ${GRPC_PORT}
-      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@users-db:${POSTGRES_PORT}/${POSTGRES_DB}
-    depends_on:
-      - users-db  
+    networks:
+      - chat-network
+
+networks:
+  chat-network:
+    name: chat-network
